ipc/ipdl/test/ipdl/error/unknownSyncMessage.ipdl
//error: Unknown sync IPC message unknownSyncMessage::Msg

sync protocol unknownSyncMessage {
parent:
    sync Msg();
};
